# PanicBase

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vite.obfuscation.ts
scripts/: build-app-icon.mjs  build-reference-css.mjs  extract-reference-sections.mjs  fetch-irecovery-msys2.mjs  gen-device-info-locales.mjs  tauri-before-build.mjs  tauri-build-community-win.mjs  tauri-build-community.mjs  tauri-build-plain.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/libimobiledevice/: README.txt
src-tauri/src/: afc.rs  analyzer.rs  anonymizer.rs  api_client.rs  community.rs  contacts_transfer.rs  crypto.rs  database.rs  gallery_afc.rs  icloud.rs  icloud_photos.rs  iphone.rs  iphone_panic_kb.json  ips.rs  kb_seal.rs  knowledge.rs  machine_key.rs  main.rs  media_transfer.rs  panic_diagnostic.rs  panic_logs_chart.rs  panic_parser.rs  panic_pull.rs  reference_focus.rs  repair_wiki.rs  security.rs  signature.rs  trust_score.rs
src/components/: AppleMark.tsx  BrandHeader.tsx  ConnectedDeviceInfoModal.tsx  CreatorNavActions.tsx  InsightDetailBar.tsx  IpsIngestHero.tsx  LanguageSelect.tsx  PanicAnalyzeWorkbench.tsx  PanicLogSourceModal.tsx  PanicLogsTable.tsx  PanicOverviewCard.tsx  PanicReferenceEnrichedPanel.tsx  PhoneUsbDock.tsx  ReferenceActionButton.tsx  ReferenceWorkshopCardView.tsx  TransferHub.tsx  UsbCenterStage.tsx  usbTypes.ts
src/data/: repairReferences.ts  repairWikiRoutes.ts
src/i18n/: context.tsx  translations.ts  uiExtras.ts
src/lib/: connectChime.ts  diagnosticLocale.ts  inferPanicReferenceFocus.ts  iphonePanicDatabase.ts  panicDiagnosticViewModel.ts  referenceWorkshopCards.ts  repairPartsSpeak.ts  workshopCardLocale.ts  workshopCardsByModel.ts  workshopCatalog.ts  workshopMaskSemantics.ts  workshopResolver.ts  workshopTechnicianCopy.ts  workshopTypes.ts
src/styles/: panic-reference-enriched.css  phone-dock.css  transfer-hub.css  (+1 more)
(+2 files in other folders)
