[package]
name = "panicbase"
version = "0.2.0"
description = "PanicBase - analyseur de panic logs iPhone"
authors = ["PanicBase"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chacha20poly1305 = "0.10"
base64 = "0.22"
dirs = "6"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
keyring = "3"
flate2 = "1"
sha1 = { version = "0.10", features = ["oid"] }
plist = "1"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "cookies", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Storage_StructuredStorage",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
flate2 = "1"
chacha20poly1305 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
